extends MarginContainer

func _on_resolution_option_item_selected(index: int) -> void:
	pass # Replace with function body.


func _on_window_option_item_selected(index: int) -> void:
	pass # Replace with function body.


func _on_anti_aliasing_option_item_selected(index: int) -> void:
	pass # Replace with function body.


func _on_frame_rate_option_item_selected(index: int) -> void:
	pass # Replace with function body.


func _on_v_sync_check_pressed() -> void:
	pass # Replace with function body.
